--- a/index.html
+++ b/index.html
@@ -195,100 +195,7 @@
           <div class="category-container">
             <div class="income-category">
               <h3>Income categories</h3>
-              <ul class="income-list">
-                <li>
-                  <div class="left-portion">
-                    <img src="icons/Income-expense/awards.jpg" alt="" />
-                    <p class="change-font-style">Awards</p>
-                  </div>
-                  <div class="right-portion">
-                    <img class="dot svg" src="icons/dot.svg" alt="" />
-                    <div class="options">
-                      <p class="edit-category-btn">Edit</p>
-                      <p class="delete-account">Delete</p>
-                    </div>
-                  </div>
-                </li>
-
-                <li>
-                  <div class="left-portion">
-                    <img src="icons/Income-expense/salary.jpg" alt="" />
-                    <p class="change-font-style">Salary</p>
-                  </div>
-                  <div class="right-portion">
-                    <img class="dot svg" src="icons/dot.svg" alt="" />
-                    <div class="options">
-                      <p class="edit-category-btn">Edit</p>
-                      <p class="delete-account">Delete</p>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="left-portion">
-                    <img src="icons/Income-expense/refunds.jpg" alt="" />
-                    <p class="change-font-style">Refunds</p>
-                  </div>
-                  <div class="right-portion">
-                    <img class="dot svg" src="icons/dot.svg" alt="" />
-                    <div class="options">
-                      <p class="edit-category-btn">Edit</p>
-                      <p class="delete-account">Delete</p>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="left-portion">
-                    <img src="icons/Income-expense/lottery.jpg" alt="" />
-                    <p class="change-font-style">Lottery</p>
-                  </div>
-                  <div class="right-portion">
-                    <img class="dot svg" src="icons/dot.svg" alt="" />
-                    <div class="options">
-                      <p class="edit-category-btn">Edit</p>
-                      <p class="delete-account">Delete</p>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="left-portion">
-                    <img src="icons/Income-expense/gift.jpg" alt="" />
-                    <p class="change-font-style">Grants</p>
-                  </div>
-                  <div class="right-portion">
-                    <img class="dot svg" src="icons/dot.svg" alt="" />
-                    <div class="options">
-                      <p class="edit-category-btn">Edit</p>
-                      <p class="delete-account">Delete</p>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="left-portion">
-                    <img src="icons/Income-expense/rent.jpg" alt="" />
-                    <p class="change-font-style">Rent</p>
-                  </div>
-                  <div class="right-portion">
-                    <img class="dot svg" src="icons/dot.svg" alt="" />
-                    <div class="options">
-                      <p class="edit-category-btn">Edit</p>
-                      <p class="delete-account">Delete</p>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="left-portion">
-                    <img src="icons/Income-expense/sales.png" alt="" />
-                    <p class="change-font-style">Sale</p>
-                  </div>
-                  <div class="right-portion">
-                    <img class="dot svg" src="icons/dot.svg" alt="" />
-                    <div class="options">
-                      <p class="edit-category-btn">Edit</p>
-                      <p class="delete-account">Delete</p>
-                    </div>
-                  </div>
-                </li>
-              </ul>
+              <ul class="income-list"></ul>
             </div>
             <div class="expense-category">
               <h3>Expense categories</h3>
