--- a/index.html
+++ b/index.html
@@ -199,21 +199,7 @@
             </div>
             <div class="expense-category">
               <h3>Expense categories</h3>
-              <ul class="expense-list">
-                <li>
-                  <div class="left-portion">
-                    <img src="icons/Income-expense/entertainment.jpg" alt="" />
-                    <p class="change-font-style">Entertainment</p>
-                  </div>
-                  <div class="right-portion">
-                    <img class="dot svg" src="icons/dot.svg" alt="" />
-                    <div class="options">
-                      <p class="edit-category-btn">Edit</p>
-                      <p class="delete-account">Delete</p>
-                    </div>
-                  </div>
-                </li>
-              </ul>
+              <ul class="expense-list"></ul>
             </div>
             <div class="add-category">
               <div class="add-box">
