--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             </div>
           </div>
         </section>
-        <section class="categories active">
+        <section class="categories">
           <div class="category-container">
             <div class="income-category">
               <h3>Income categories</h3>
