--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="darkmode.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="category.css" />
+    <link rel="stylesheet" href="budget.css" />
   </head>
   <body>
     <div class="app">
@@ -20,7 +21,59 @@
       <main>
         <section class="home"></section>
         <section class="analysis">e</section>
-        <section class="budgets">l</section>
+        <section class="budgets active">
+          <header>
+            <div class="head-content">
+              <h3>August,2024</h3>
+              <div class="budget-info">
+                <div class="total-budget">
+                  <p>TOTAL BUDGET</p>
+                  <b class="green stylish">₹0.00</b>
+                </div>
+                <div class="spent-budget">
+                  <p>SPENT BUDGET</p>
+                  <b class="red stylish">₹0.00</b>
+                </div>
+              </div>
+            </div>
+          </header>
+          <div class="budgeted-categories">
+            <h3>Budgeted categories: Aug,2024</h3>
+          </div>
+          <div class="spent-categories">
+            <h3>Not budgeted this month</h3>
+            <div class="category-budgets">
+              <ul class="budget-list">
+                <li>
+                  <div class="left-portion">
+                    <img
+                      class="icon"
+                      src="./icons//Income-expense/books.jpg"
+                      alt=""
+                    />
+                    <p class="change-font-style">Book</p>
+                  </div>
+                  <div class="right-portion">
+                    <button>SET BUDGET</button>
+                  </div>
+                </li>
+                <li>
+                  <div class="left-portion">
+                    <img
+                      class="icon"
+                      src="./icons//Income-expense/books.jpg"
+                      alt=""
+                    />
+                    <p class="change-font-style">Book</p>
+                  </div>
+                  <div class="right-portion">
+                    <button>SET BUDGET</button>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
         <section class="account">
           <header class="account-header">
             <h3>Overall</h3>
