--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <main>
         <section class="home"></section>
         <section class="analysis">e</section>
-        <section class="budgets active">
+        <section class="budgets">
           <div class="budget-container">
             <header>
               <div class="head-content">
