--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <main>
         <section class="home"></section>
         <section class="analysis">e</section>
-        <section class="budgets">
+        <section class="budgets active">
           <div class="budget-container">
             <header>
               <div class="head-content">
@@ -40,6 +40,109 @@
             </header>
             <div class="budgeted-categories">
               <h3>Budgeted categories: Aug,2024</h3>
+              <div class="set-budgeted-container">
+                <ul class="set-budgeted-list">
+                  <li>
+                    <div class="text-container">
+                      <div class="left-portion">
+                        <img
+                          class="icon"
+                          src="./icons//Income-expense/books.jpg"
+                          alt=""
+                        />
+                        <div class="budget-details">
+                          <p class="change-font-style">Book</p>
+
+                          <div class="spent-box">
+                            <p>Spent:</p>
+                            <p class="amount-spent red">₹0.00</p>
+                          </div>
+                          <div class="remaining-box">
+                            <p>Remaining:</p>
+                            <p class="amount-remaining green">₹108.00</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="right-portion">
+                        <img class="three-dot svg" src="icons/dot.svg" alt="" />
+                        <small class="added-time">(Aug,2004)</small>
+                      </div>
+                    </div>
+                    <div class="bar-container">
+                      <div class="label-content">
+                        <div class="label">₹108.00</div>
+                      </div>
+                      <div class="bar-status"></div>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="text-container">
+                      <div class="left-portion">
+                        <img
+                          class="icon"
+                          src="./icons//Income-expense/entertainment.jpg"
+                          alt=""
+                        />
+                        <div class="budget-details">
+                          <p class="change-font-style">Entertainment</p>
+
+                          <div class="spent-box">
+                            <p>Spent:</p>
+                            <p class="amount-spent red">₹0.00</p>
+                          </div>
+                          <div class="remaining-box">
+                            <p>Remaining:</p>
+                            <p class="amount-remaining green">₹1000.00</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="right-portion">
+                        <img class="three-dot svg" src="icons/dot.svg" alt="" />
+                        <small class="added-time">(Aug,2004)</small>
+                      </div>
+                    </div>
+                    <div class="bar-container">
+                      <div class="label-content">
+                        <div class="label">₹1000.00</div>
+                      </div>
+                      <div class="bar-status limited"></div>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="text-container">
+                      <div class="left-portion">
+                        <img
+                          class="icon"
+                          src="./icons//Income-expense/phone.jpg"
+                          alt=""
+                        />
+                        <div class="budget-details">
+                          <p class="change-font-style">Recharge</p>
+
+                          <div class="spent-box">
+                            <p>Spent:</p>
+                            <p class="amount-spent red">₹300.00</p>
+                          </div>
+                          <div class="remaining-box">
+                            <p>Remaining:</p>
+                            <p class="amount-remaining green">₹0.00</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="right-portion">
+                        <img class="three-dot svg" src="icons/dot.svg" alt="" />
+                        <small class="added-time">(Aug,2004)</small>
+                      </div>
+                    </div>
+                    <div class="bar-container">
+                      <div class="label-content">
+                        <div class="label">₹399.00</div>
+                      </div>
+                      <div class="bar-status limit-exceed"></div>
+                    </div>
+                  </li>
+                </ul>
+              </div>
             </div>
             <div class="spent-categories">
               <h3>Not budgeted this month</h3>
