--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
                         <div class="budget-details">
                           <p class="change-font-style">Book</p>
 
-                          <div class="spent-box">
+                          <small class="spent-box">
                             <p>Spent:</p>
                             <p class="amount-spent red">₹0.00</p>
-                          </div>
-                          <div class="remaining-box">
+                          </small>
+                          <small class="remaining-box">
                             <p>Remaining:</p>
                             <p class="amount-remaining green">₹108.00</p>
-                          </div>
+                          </small>
                         </div>
                       </div>
                       <div class="right-portion">
