--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                       </div>
                       <div class="right-portion">
                         <img class="three-dot svg" src="icons/dot.svg" alt="" />
-                        <small class="added-time">(Aug,2004)</small>
+                        <small class="added-time opacity">(Aug,2004)</small>
                       </div>
                     </div>
                     <div class="bar-container">
@@ -98,7 +98,7 @@
                       </div>
                       <div class="right-portion">
                         <img class="three-dot svg" src="icons/dot.svg" alt="" />
-                        <small class="added-time">(Aug,2004)</small>
+                        <small class="added-time opacity">(Aug,2004)</small>
                       </div>
                     </div>
                     <div class="bar-container">
@@ -131,7 +131,7 @@
                       </div>
                       <div class="right-portion">
                         <img class="three-dot svg" src="icons/dot.svg" alt="" />
-                        <small class="added-time">(Aug,2004)</small>
+                        <small class="added-time opacity">(Aug,2004)</small>
                       </div>
                     </div>
                     <div class="bar-container">
