--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                   type="tel"
                   id="budget-value"
                 />
-                <label for="initial-amount">Enter Limit</label>
+                <label for="budget-value">Enter Limit</label>
               </div>
               <div class="account-btns">
                 <button class="cancelEdit">cancle</button>
