--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
             <h3>Set Budget</h3>
             <div class="budget-card">
               <div class="card-body">
-                <img class="icon" src="./icons/Income-expense/bag.jpg" alt="" />
+                <img class="icon set-budget-icon" src="" alt="" />
                 <div class="card-info">
-                  <p class="bold">Hand Bag</p>
+                  <p class="bold budget-category-name"></p>
                 </div>
               </div>
             </div>
@@ -189,8 +189,8 @@
                 <label for="budget-value">Enter Limit</label>
               </div>
               <div class="account-btns">
-                <button class="cancelEdit">cancle</button>
-                <button class="updateBtn">Update</button>
+                <button class="cancel-budget-box">cancle</button>
+                <button class="set-limit">Update</button>
               </div>
             </div>
           </div>
