--- a/index.html
+++ b/index.html
@@ -167,7 +167,10 @@
           </div>
           <!-- set Budget -->
           <div class="budget-input-container">
+           <header>
             <h3>Set Budget</h3>
+            <h3 class="opacity">Aug,2024</h3>
+           </header>
             <div class="budget-card">
               <div class="card-body">
                 <img class="icon set-budget-icon" src="" alt="" />
@@ -176,7 +179,6 @@
                 </div>
               </div>
             </div>
-
             <div class="form-container">
               <div class="input-body">
                 <input
