--- a/index.html
+++ b/index.html
@@ -204,11 +204,11 @@
               <div class="top">
                 <div class="expense">
                   <p>EXPENSE SO FAR</p>
-                  <b class="red bold">-₹5,000</b>
+                  <b class="red stylish">-₹5,000</b>
                 </div>
                 <div class="income">
                   <p>INCOME SO FAR</p>
-                  <b class="green bold">₹20,302</b>
+                  <b class="green stylish">₹20,302</b>
                 </div>
               </div>
               <div class="bottom">
