--- a/index.html
+++ b/index.html
@@ -767,6 +767,7 @@
       </div>
     </div>
 
+    <script  src="home.js"></script>
     <script async type="module" src="script.js"></script>
     <script defer type="module" src="functions.js"></script>
     <script defer type="module" src="category.js"></script>
