--- a/index.html
+++ b/index.html
@@ -42,16 +42,17 @@
               <h3>Budgeted categories: Aug,2024</h3>
               <div class="set-budgeted-container">
                 <ul class="set-budgeted-list">
+                 
                   <li>
                     <div class="text-container">
                       <div class="left-portion">
                         <img
                           class="icon"
-                          src="./icons//Income-expense/books.jpg"
+                          src="./icons//Income-expense/entertainment.jpg"
                           alt=""
                         />
                         <div class="budget-details">
-                          <p class="change-font-style">Book</p>
+                          <p class="change-font-style">Entertainment</p>
 
                           <div class="spent-box">
                             <p>Spent:</p>
@@ -59,20 +60,24 @@
                           </div>
                           <div class="remaining-box">
                             <p>Remaining:</p>
-                            <p class="amount-remaining green">₹108.00</p>
+                            <p class="amount-remaining green">₹1000.00</p>
                           </div>
                         </div>
                       </div>
                       <div class="right-portion">
                         <img class="three-dot svg" src="icons/dot.svg" alt="" />
                         <small class="added-time opacity">(Aug,2004)</small>
+                        <div class="budget-operations">
+                          <p class="change-limit">Change limit</p>
+                          <p class="remove-budget">Remove budget</p>
+                        </div>
                       </div>
                     </div>
                     <div class="bar-container">
                       <div class="label-content">
-                        <div class="label">₹108.00</div>
+                        <div class="label">₹1000.00</div>
                       </div>
-                      <div class="bar-status"></div>
+                      <div class="bar-status limited"></div>
                     </div>
                   </li>
                   <li>
@@ -99,6 +104,10 @@
                       <div class="right-portion">
                         <img class="three-dot svg" src="icons/dot.svg" alt="" />
                         <small class="added-time opacity">(Aug,2004)</small>
+                        <div class="budget-operations">
+                          <p class="change-limit">Change limit</p>
+                          <p class="remove-budget">Remove budget</p>
+                        </div>
                       </div>
                     </div>
                     <div class="bar-container">
@@ -108,39 +117,7 @@
                       <div class="bar-status limited"></div>
                     </div>
                   </li>
-                  <li>
-                    <div class="text-container">
-                      <div class="left-portion">
-                        <img
-                          class="icon"
-                          src="./icons//Income-expense/phone.jpg"
-                          alt=""
-                        />
-                        <div class="budget-details">
-                          <p class="change-font-style">Recharge</p>
-
-                          <div class="spent-box">
-                            <p>Spent:</p>
-                            <p class="amount-spent red">₹300.00</p>
-                          </div>
-                          <div class="remaining-box">
-                            <p>Remaining:</p>
-                            <p class="amount-remaining green">₹0.00</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="right-portion">
-                        <img class="three-dot svg" src="icons/dot.svg" alt="" />
-                        <small class="added-time opacity">(Aug,2004)</small>
-                      </div>
-                    </div>
-                    <div class="bar-container">
-                      <div class="label-content">
-                        <div class="label">₹399.00</div>
-                      </div>
-                      <div class="bar-status limit-exceed"></div>
-                    </div>
-                  </li>
+                  
                 </ul>
               </div>
             </div>
