--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <h3>Budgeted categories: Aug,2024</h3>
               <div class="set-budgeted-container">
                 <ul class="set-budgeted-list">
-                  <!-- <li>
+                  <li>
                     <div class="text-container">
                       <div class="left-portion">
                         <img
@@ -63,10 +63,10 @@
                           </div>
                         </div>
                       </div>
-                      <div class="right-portion" data-category-id="6">
+                      <div class="right-portion" >
                         <img class="three-dot svg" src="icons/dot.svg" alt="" />
                         <small class="added-time opacity">(Aug,2004)</small>
-                        <div class="budget-operations">
+                        <div class="budget-operations" data-category-id="6">
                           <p class="change-limit">Change limit</p>
                           <p class="remove-budget">Remove budget</p>
                         </div>
@@ -78,7 +78,7 @@
                       </div>
                       <div class="bar-status limited"></div>
                     </div>
-                  </li> -->
+                  </li>
                 </ul>
               </div>
             </div>
@@ -129,8 +129,39 @@
                 <label for="budget-value">Enter Limit</label>
               </div>
               <div class="account-btns">
-                <button class="cancel-budget-box">cancle</button>
+                <button class="cancel-budget-box">Cancle</button>
                 <button class="set-limit">Update</button>
+              </div>
+            </div>
+          </div>
+          <!-- change limit -->
+          <div class="budget-edit-container">
+            <header>
+              <h3>Edit Budget</h3>
+              <h3 class="opacity">Aug,2024</h3>
+            </header>
+            <div class="budget-card">
+              <div class="card-body">
+                <img class="icon edit-budget-icon" src="./icons/Income-expense/dress.jpg" alt="" />
+                <div class="card-info">
+                  <p class="bold edit-category-name">Dress</p>
+                </div>
+              </div>
+            </div>
+            <div class="form-container">
+              <div class="input-body">
+                <input
+                  autocomplete="off"
+                  pattern="[0-9]*"
+                  required
+                  type="tel"
+                  id="budget-updated-value"
+                />
+                <label for="budget-value">Enter Limit</label>
+              </div>
+              <div class="account-btns">
+                <button class="cancel-edit-box">Cancle</button>
+                <button class="updated-limit">Update</button>
               </div>
             </div>
           </div>
