--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             </div>
           </div>
         </section>
-        <section class="account active">
+        <section class="account">
           <div class="account-container">
             <header class="account-header">
               <h3>Overall</h3>
@@ -319,7 +319,7 @@
             </div>
           </div>
         </section>
-        <section class="categories">
+        <section class="categories  active">
           <div class="category-container">
             <div class="income-category">
               <h3>Income categories</h3>
