--- a/index.html
+++ b/index.html
@@ -42,43 +42,7 @@
               <h3>Budgeted categories: Aug,2024</h3>
               <div class="set-budgeted-container">
                 <ul class="set-budgeted-list">
-                  <li>
-                    <div class="text-container">
-                      <div class="left-portion">
-                        <img
-                          class="icon"
-                          src="./icons//Income-expense/entertainment.jpg"
-                          alt=""
-                        />
-                        <div class="budget-details">
-                          <p class="change-font-style">Entertainment</p>
-
-                          <div class="spent-box">
-                            <p>Spent:</p>
-                            <p class="amount-spent red">₹0.00</p>
-                          </div>
-                          <div class="remaining-box">
-                            <p>Remaining:</p>
-                            <p class="amount-remaining green">₹1000.00</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="right-portion">
-                        <img class="three-dot svg" src="icons/dot.svg" alt="" />
-                        <small class="added-time opacity">(Aug,2004)</small>
-                        <div class="budget-operations" data-category-id="6">
-                          <p class="change-limit">Change limit</p>
-                          <p class="remove-budget">Remove budget</p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="bar-container">
-                      <div class="label-content">
-                        <div class="label">₹1000.00</div>
-                      </div>
-                      <div class="bar-status limited"></div>
-                    </div>
-                  </li>
+                  
                 </ul>
               </div>
             </div>
@@ -156,7 +120,7 @@
             </div>
           </div>
         </section>
-        <section class="account">
+        <section class="account active">
           <div class="account-container">
             <header class="account-header">
               <h3>Overall</h3>
@@ -319,7 +283,7 @@
             </div>
           </div>
         </section>
-        <section class="categories  active">
+        <section class="categories">
           <div class="category-container">
             <div class="income-category">
               <h3>Income categories</h3>
